<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/RestEasySpecialCr7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="340dp"
            android:layout_height="424dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="25dp"
            app:cardElevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.24000001">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioGroup
                    android:id="@+id/radio_group_m_f"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="48dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <RadioButton
                        android:id="@+id/radio_f"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/orbitron_bold"
                        android:text="@string/f"
                        android:textColor="@color/culoareBonus" />

                    <RadioButton
                        android:id="@+id/radio_m"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/orbitron_bold"
                        android:text="@string/m"
                        android:textColor="@color/culoareBonus" />
                </RadioGroup>

                <EditText
                    android:id="@+id/txt_ns_varsta"
                    android:layout_width="49dp"
                    android:layout_height="41dp"
                    android:hint="@string/gol"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:textColor="@color/culoareBonus"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@+id/radio_group_m_f"
                    app:layout_constraintEnd_toEndOf="@+id/masa"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@+id/masa"
                    app:layout_constraintTop_toBottomOf="@+id/masa" />

                <EditText
                    android:id="@+id/masa"
                    android:layout_width="55dp"
                    android:layout_height="45dp"
                    android:autofillHints=""
                    android:hint="@string/gol"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:textColor="@color/culoareBonus"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@+id/txt_ns_varsta"
                    app:layout_constraintEnd_toEndOf="@+id/inaltime"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/inaltime"
                    app:layout_constraintTop_toBottomOf="@+id/inaltime" />

                <EditText

                    android:id="@+id/inaltime"
                    android:layout_width="55dp"
                    android:layout_height="45dp"
                    android:autofillHints=""
                    android:hint="@string/gol"
                    android:inputType="numberDecimal"
                    android:textColor="@color/culoareBonus"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@+id/masa"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.515"
                    app:layout_constraintStart_toEndOf="@+id/textView7"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="202dp"
                    android:layout_height="25dp"
                    android:layout_marginBottom="56dp"
                    android:fontFamily="@font/orbitron_bold"
                    android:text="@string/bmr_label_sex"
                    android:textColor="@color/LogoGigapack3"
                    android:textSize="13sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/radio_group_m_f"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/orbitron_bold"
                    android:text="@string/bmr_label_varsta"
                    android:textColor="@color/LogoGigapack3"
                    android:textSize="13sp"
                    app:layout_constraintBottom_toTopOf="@+id/textView9"
                    app:layout_constraintEnd_toEndOf="@+id/textView9"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/textView9"
                    app:layout_constraintTop_toBottomOf="@+id/textView10" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/orbitron_bold"
                    android:text="@string/bmr_label_inaltime"
                    android:textColor="@color/LogoGigapack3"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@+id/textView10"
                    app:layout_constraintEnd_toEndOf="@+id/textView10"
                    app:layout_constraintHorizontal_bias="0.026"
                    app:layout_constraintStart_toStartOf="@+id/textView10"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/orbitron_bold"
                    android:text="@string/bmr_label_masa"
                    android:textColor="@color/LogoGigapack3"
                    android:textSize="13sp"
                    app:layout_constraintBottom_toTopOf="@+id/textView8"
                    app:layout_constraintEnd_toEndOf="@+id/textView8"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/textView8"
                    app:layout_constraintTop_toBottomOf="@+id/textView7" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buton_calculeaza_bmr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buton_style_1"
            android:ems="15"
            android:fontFamily="@font/orbitron_bold"
            android:text="@string/bmr_buton_calculeaza"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.86" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>